compiler/test/parse-err/cmp-bool-unsupported.gr
// RUN: graphalg-translate --import-graphalg --verify-diagnostics %s

func CmpBoolUnsupported(
    // expected-note@below{{operands have semiring bool}}
    a: bool, b: bool) -> bool {
    // Comparison is not supported for bool semiring (only int, real, trop_real)
    // expected-error@below{{comparison is only supported for int, real, and trop_real types}}
    return a < b;
}
